Ejemplo de polimorfismo sobre Figura y regeneracion del codigo del Tema 1